Implementa stand